[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/CollisionAvoidance.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9951, 32.2026 )

[node name="CollisionAvoidance" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Ahead" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Ahead"]
modulate = Color( 0.00784314, 0, 1, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Ahead2" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Ahead2"]
modulate = Color( 1, 0.0470588, 0, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="RayCastAhead" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="RayCastAhead2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
